# covariatetimeseries

./: LICENSE  NOTICE  README.md  dataset_description.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/covariatetimeseries/: __init__.py  timeseries_loader.py
src/covariatetimeseries/data_collections/: __init__.py  _collection_info.csv  air_quality.csv  bike_sharing.csv  covid_mobility.csv  demo_level1.csv  demo_level2.csv  demo_level3.csv  demo_material.csv  electricity.csv  housing.csv  illness.csv  stackoverflow.csv
